--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="operador" onclick="limparTela()">AC</button>
             <button class="operador" onclick="apagarUltimo()">DEL</button>
             <button class="operador" onclick="adicionarOperador('/')">/</button>
-            <button class="operador" onclick="adicionarOperador('*')">*</button>
+            <button class="operador" onclick="adicionarOperador('X')">X</button>
             
             <button onclick="adicionarNumero('7')">7</button>
             <button onclick="adicionarNumero('8')">8</button>
