--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="operador" onclick="limparTela()">AC</button>
             <button class="operador" onclick="apagarUltimo()">DEL</button>
             <button class="operador" onclick="adicionarOperador('/')">/</button>
-            <button class="operador" onclick="adicionarOperador('X')">X</button>
+            <button class="operador" onclick="adicionarOperador('*')">*</button>
             
             <button onclick="adicionarNumero('7')">7</button>
             <button onclick="adicionarNumero('8')">8</button>
@@ -31,10 +31,10 @@
             <button onclick="adicionarNumero('2')">2</button>
             <button onclick="adicionarNumero('3')">3</button>
             <button class="igual" onclick="calcular()">=</button>
-            
+
             <button class="zero" onclick="adicionarNumero('0')">0</button>
             <button onclick="adicionarNumero('.')">.</button>
-        </div>
+            </div>
     </div>
 
     <script src="script.js"></script>
